Create db complaints
