# database/models/complaint.js
@@ -1,0 +1,11 @@
+const { Complaint } = require("objection");
+
+class Complaint extends Model {
+
+    static get tableName() {
+        return "users";
+    };
+}
+
+
+module.exports = { Complaint };
